tests/test_proof/bad/structs-overlap.catala_en
## Test

```catala
declaration structure T:
   data c content boolean
   data d content integer

declaration structure S:
    data a content integer
    data b content T

declaration scope A:
  context x content integer
  context y content S

scope A:
  definition y equals S { -- a : 0 -- b : T { -- c : false -- d: 0}}
  definition x under condition (y.a = 0) or y.b.c consequence equals 0
  definition x under condition not (y.a = 0) or not (y.b.c) consequence equals 1
```

```catala-test-inline
$ catala Proof --disable_counterexamples 
[WARNING] In scope "A", the variable "x" is never used anywhere; maybe it's unnecessary?

┌─⯈ tests/test_proof/bad/structs-overlap.catala_en:13.11-13.12:
└──┐
13 │   context x content integer
   │           ‾
   └─ Test
[ERROR] [A.x] At least two exceptions overlap for this variable:
┌─⯈ tests/test_proof/bad/structs-overlap.catala_en:13.11-13.12:
└──┐
13 │   context x content integer
   │           ‾
   └─ Test
Counterexample generation is disabled so none was generated.
```
